# scan-it

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vite.config.ts
.github/workflows/: release-desktop.yml
apps/desktop/: .env.example  index.html  package.json  vite.config.ts
apps/desktop/src/: main.tsx  router.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/styles/: app.css
apps/marketing/: .env.example  index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
apps/marketing/src/: App.tsx  TermsPage.tsx  index.css  main.tsx  vite-env.d.ts
apps/web/: .env.example  package.json  tsconfig.json  vercel.json  vite.config.ts
apps/web/public/: robots.txt  site.webmanifest  sitemap.xml
apps/web/scripts/: generate-icons.mjs
apps/web/src/: routeTree.gen.ts  router.tsx  vite-env.d.ts
apps/web/src/components/: about-page.tsx  landing-page.tsx  marketing-article-page.tsx  marketing-json-ld.tsx  (+2 more)
convex/: http.ts  scanSessions.ts  schema.ts
convex/_generated/: api.d.ts
docs/: STYLEGUIDE.md
src/: routeTree.gen.ts  vite-env.d.ts
src/components/: phone-scanner.tsx  portrait-scanner-gate.tsx  site-header.tsx  theme-provider.tsx  theme-toggle.tsx
src/components/ui/: button.tsx  card.tsx
src/lib/: deviceId.ts
src/routes/: __root.tsx  desk.$publicId.tsx  index.tsx  s.$publicId.tsx
src/styles/: app.css
(+27 files in other folders)
