[package]
name = "scan-it"
version = "0.1.2"
description = "Scan It desktop"
authors = ["you"]
edition = "2021"

[lib]
name = "scanit_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.6"
